--- a/style.scss
+++ b/style.scss
@@ -36,6 +36,12 @@ input {
   color: inherit;
 }
 
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 #app {
   max-width: 1440px;
   margin: 0 auto;
@@ -51,14 +57,15 @@ input {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-color: #fff;
 }
 
 .info_wrap {
   width: 100%;
   height: 60%;
-  background-color: #fff;
   display: grid;
   grid-template-columns: repeat(2, 1fr) 660px repeat(2, 1fr);
+  align-items: center;
 
   .logo {
     display: flex;
@@ -98,17 +105,93 @@ input {
 
     span {
       width: 100%;
+      font-size: 14px;
+      justify-self: start;
     }
+  }
+}
+
+.search_wrap {
+  position: relative;
+
+  .search_icon {
+    position: absolute;
+    top: 30%;
+    left: 15px;
+  }
+
+  .search_input {
+    width: 100%;
+    height: 50px;
+    padding: 0 40px;
+    font-size: 14px;
+    line-height: 22px;
+    background-color: #f1f1f1;
+    border: none;
+    border-radius: 40px;
+    appearance: none;
+  }
+
+  .search_input::placeholder {
+    text-align: center;
+  }
+
+  .search_input:focus {
+    background-color: rgba(255, 255, 255, 0.87);
+    border: 2px solid #0dcaf0
+  }
+}
+
+.favorites {
+  width: 43px;
+  height: 32px;
+  justify-self: end;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.profile {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 80px 50px;
+  justify-items: center;
+  align-items: center;
+  font-size: 14px;
+  line-height: 22px;
+
+
+  .profile_img {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background-color: red;
+    justify-self: start;
   }
 }
 
 .nav_menu_wrap {
   width: 100%;
   height: 40%;
-  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   ul {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding: 0 20px;
+
+    li {
+      cursor: pointer;
+      padding: 2px 10px;
+    }
+
+    li:hover {
+      background-color: gray;
+      border-radius: 30px;
+    }
   }
 }
