--- a/style.scss
+++ b/style.scss
@@ -108,7 +108,9 @@ a {
       width: 100%;
       font-size: 14px;
       justify-self: start;
-      padding-right: 20px;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
     }
   }
 }
@@ -207,5 +209,44 @@ a {
       background-color: gray;
       border-radius: 30px;
     }
+  }
+}
+
+.drop_down_menu {
+  width: 385px;
+  height: 420px;
+  z-index: 2000;
+  border-radius: 10px;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr) 2fr 1fr;
+  background-color: red;
+
+  .city_search {
+    width: 100%;
+    height: 85px;
+  }
+
+  .cities-bages {
+    width: 100%;
+    height: 85px;
+  }
+
+  .regions {
+    width: 100%;
+    height: 200px;
+  }
+
+  .save_button {
+    width: 100%;
+    height: 50px;
+    border: none;
+    background-color: #0656B4;
+    cursor: pointer;
+    border-radius: 0 0 10px 10px;
+    color: #fff;
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 700;
+    text-transform: uppercase;
   }
 }
