--- a/style.scss
+++ b/style.scss
@@ -219,11 +219,29 @@ a {
   border-radius: 10px;
   display: grid;
   grid-template-rows: repeat(2, 1fr) 2fr 1fr;
-  background-color: red;
+  background-color: rgba(255, 255, 255, 0.87);
 
-  .city_search {
+  .city_search_wrap {
     width: 100%;
     height: 85px;
+    padding: 17px 10px;
+
+    .city_search {
+      width: 100%;
+      height: 50px;
+      padding: 0 40px;
+      font-size: 14px;
+      line-height: 22px;
+      background-color: #f1f1f1;
+      border: none;
+      border-radius: 40px;
+      appearance: none;
+    }
+
+    .city_search:focus {
+      background-color: rgba(255, 255, 255, 0.87);
+      border: 2px solid #0dcaf0
+    }
   }
 
   .cities-bages {
@@ -234,6 +252,8 @@ a {
   .regions {
     width: 100%;
     height: 200px;
+
+
   }
 
   .save_button {
