--- a/style.scss
+++ b/style.scss
@@ -252,8 +252,17 @@ a {
   .regions {
     width: 100%;
     height: 200px;
+    padding: 10px 20px;
+    overflow: scroll;
+    text-align: start;
 
-
+    .city {
+      width: 100%;
+      height: 50px;
+      cursor: pointer;
+      font-size: 14px;
+      line-height: 22px;
+    }
   }
 
   .save_button {
