Add js for dropdown

--- a/style.scss
+++ b/style.scss
@@ -214,7 +214,6 @@ a {
 
 .drop_down_menu {
   width: 385px;
-  height: 420px;
   z-index: 2000;
   border-radius: 10px;
   display: grid;
@@ -245,8 +244,15 @@ a {
   }
 
   .cities-bages {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
     width: 100%;
     height: 85px;
+  }
+
+  .hidden {
+    display: none;
   }
 
   .regions {
