--- a/style.scss
+++ b/style.scss
@@ -79,6 +79,10 @@ a {
     align-items: center;
   }
 
+  .city_menu_wrap {
+    position: relative;
+  }
+
   .city {
     width: auto;
     height: auto;
@@ -213,12 +217,17 @@ a {
 }
 
 .drop_down_menu {
+  position: absolute;
+  top: 50px;
+  left: 0;
+  margin-top: 10px;
   width: 385px;
   z-index: 2000;
   border-radius: 10px;
   display: grid;
   grid-template-rows: repeat(2, 1fr) 2fr 1fr;
-  background-color: rgba(255, 255, 255, 0.87);
+  background-color: #fff;
+  box-shadow: 0 7px 38px rgb(44 62 106 / 25%);
 
   .city_search_wrap {
     width: 100%;
@@ -263,8 +272,9 @@ a {
     height: 200px;
     padding: 10px 20px;
     overflow: scroll;
+    text-align: start;
 
-    .city {
+    .region {
       width: 100%;
       height: 50px;
       cursor: pointer;
