--- a/style.scss
+++ b/style.scss
@@ -296,11 +296,87 @@ a {
   }
 }
 
+@-webkit-keyframes scale-in-tl {
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transform-origin: 0% 0%;
+    transform-origin: 0% 0%;
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: 0% 0%;
+    transform-origin: 0% 0%;
+    opacity: 1;
+  }
+}
+
+@keyframes scale-in-tl {
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transform-origin: 0% 0%;
+    transform-origin: 0% 0%;
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: 0% 0%;
+    transform-origin: 0% 0%;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes scale-out-tl {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    opacity: 1;
+  }
+}
+
+@keyframes scale-out-tl {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    opacity: 1;
+  }
+}
+
 .drop_down_open {
   display: grid;
   grid-template-rows: repeat(2, 1fr) 2fr 1fr;
+  -webkit-animation: scale-in-tl 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: scale-in-tl 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 .drop_down_close {
-  display: none;
+
+  -webkit-animation: scale-out-tl 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: scale-out-tl 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
