--- a/style.scss
+++ b/style.scss
@@ -217,6 +217,7 @@ a {
 }
 
 .drop_down_menu {
+  height: auto;
   position: absolute;
   top: 50px;
   left: 0;
@@ -251,14 +252,32 @@ a {
   }
 
   .cities-bages {
-    padding: 0 20px;
+    padding: 10px 20px;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: flex-start;
+    gap: 10px;
     width: 100%;
-    height: 85px;
+    min-height: 85px;
+    border-bottom: 2px solid grey;
 
-    .bage {}
+    .bage {
+      min-height: 40px;
+      border-radius: 50px;
+      background-color: blue;
+      color: #fff;
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      align-items: center;
+      justify-items: center;
+      gap: 10px;
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 22px;
+      padding: 10px 15px;
+      cursor: pointer;
+    }
   }
 
   .hidden {
@@ -293,6 +312,8 @@ a {
     line-height: 16px;
     font-weight: 700;
     text-transform: uppercase;
+    grid-row-start: 4;
+    grid-row-end: 5;
   }
 }
 
@@ -370,7 +391,8 @@ a {
 
 .drop_down_open {
   display: grid;
-  grid-template-rows: repeat(2, 1fr) 2fr 1fr;
+  grid-template-rows: 80px minmax(80px, 1fr) 200px 50px;
+  gap: 5px;
   -webkit-animation: scale-in-tl 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
   animation: scale-in-tl 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
