--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@ $background-white: rgba(255, 255, 255, 0.87);
 $white: #fff;
 $gray: #d8d8d8;
 $focus: #0dcaf0;
+$background-mobile: #0dcaf0;
 $blue: #0656B4;
 
 *,
@@ -60,7 +61,6 @@ a {
   padding: 0 2rem;
   text-align: center;
   display: grid;
-  grid-template-rows: 136px 1fr;
   background-color: #fff;
 }
 
@@ -76,9 +76,13 @@ a {
   width: 100%;
   height: 60%;
   display: grid;
-  grid-template-columns: repeat(2, 1fr) 3fr repeat(2, 1fr);
+  grid-template-columns: 190px 1fr 3fr repeat(2, 1fr);
   ;
   align-items: center;
+
+  .burger_menu {
+    display: none;
+  }
 
   .logo {
     display: flex;
@@ -411,4 +415,97 @@ a {
 .drop_down_close {
   -webkit-animation: scale-out-tl 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
   animation: scale-out-tl 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@media (max-width: 820px) {
+  #app {
+    padding: 0;
+  }
+
+  .header {
+    height: 4rem;
+    padding: 0 5px;
+  }
+
+  .city_menu_wrap,
+  .search_wrap,
+  .profile,
+  .nav_menu_wrap {
+    display: none;
+  }
+
+  .info_wrap {
+    grid-template-columns: 30px 1fr 30px;
+    height: 100%;
+    align-items: center;
+
+    .burger_menu {
+      width: 100%;
+      height: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+      padding-left: 0;
+      padding-right: 0;
+      border: none;
+      background-color: transparent;
+      cursor: pointer;
+      transition: .3s ease;
+
+      .burger_menu_bars {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 4px;
+        background-color: $black;
+        transition: .3s;
+
+        &:before,
+        &:after {
+          content: "";
+          display: block;
+          position: absolute;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: $black;
+          transition: .3s;
+        }
+
+        &:before {
+          transform: translate(0, -8px);
+        }
+
+        &:after {
+          transform: translate(0, 8px);
+        }
+      }
+
+      .menu-open & {
+
+        .burger_menu_bars {
+          background-color: transparent;
+
+          &:before {
+            transform: rotate(45deg);
+          }
+
+          &:after {
+            transform: rotate(-45deg);
+          }
+        }
+      }
+    }
+
+    .logo {
+      grid-column-start: 2;
+      grid-column-end: 3;
+    }
+
+    .favorites {
+      grid-column-start: 3;
+      grid-column-end: 4;
+    }
+  }
 }
