--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@ $black: #242424;
 $background-white: rgba(255, 255, 255, 0.87);
 $white: #fff;
 $gray: #d8d8d8;
+$darkGrey: #767676;
 $focus: #0dcaf0;
 $background-mobile: #0dcaf0;
 $blue: #0656B4;
@@ -299,28 +300,36 @@ a {
   .regions {
     width: 100%;
     height: 200px;
-
     overflow: scroll;
     text-align: start;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
 
     .region {
       width: 100%;
       height: 50px;
       cursor: pointer;
-      font-size: 14px;
-      line-height: 22px;
-      padding: 0 20px;
+      padding: 10px 20px;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: flex-start;
 
       span {
+        display: block;
+        height: 100%;
+        font-size: 14px;
+        line-height: 22px;
         text-align: center;
       }
 
       .region_info {
         font-size: 10px;
+        color: $darkGrey;
       }
     }
 
@@ -328,6 +337,52 @@ a {
       background-color: $gray;
     }
   }
+
+  @keyframes loader {
+    0% {
+      transform: rotate(0deg);
+    }
+
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  .loader {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+
+    & div {
+      box-sizing: border-box;
+      display: block;
+      position: absolute;
+      width: 64px;
+      height: 64px;
+      margin: 8px;
+      border: 8px solid $white;
+      border-radius: 50%;
+      animation: loader 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+      border-color: $blue transparent transparent transparent;
+    }
+
+    & div:nth-child(1) {
+      animation-delay: -0.45s;
+    }
+
+    & div:nth-child(2) {
+      animation-delay: -0.3s;
+    }
+
+    & div:nth-child(3) {
+      animation-delay: -0.15s;
+    }
+  }
+
+
+
+
 
   .save_button {
     width: 100%;
