--- a/style.scss
+++ b/style.scss
@@ -294,7 +294,7 @@ a {
       background-color: $blue;
       color: $white;
       display: grid;
-      grid-template-columns: 2fr 1fr;
+      grid-template-columns: 1fr 20px;
       align-items: center;
       justify-items: center;
       gap: 10px;
