--- a/style.scss
+++ b/style.scss
@@ -200,6 +200,7 @@ a {
     height: 32px;
     border-radius: 50%;
     background-color: red;
+    background-image: url('./public/avatar.png');
     justify-self: start;
   }
 }
